<resources>
    <string name="app_name">TheChallenger</string>
    <string name="create_challenge">Create a Challenge</string>
    <string name="discover_challenges">Discover Challenges</string>
    <string name="rankings">Rankings</string>
    <string name="my_challenges">My Challenges</string>
    <string name="my_participations">My Participations</string>
    <string name="action_profile">My Profile</string>
    <string name="action_my_challenges">My Challenges</string>
    <string name="action_my_participations">My Participations</string>
    <string name="action_create_challenge">Start a challenge</string>
    <string name="action_search">Discover challenges</string>

    <string name="title_challenge_details">Challenge Details</string>
    <string name="title_challenge_response">Challenge Response</string>
    <string name="title_user_profile">User Profile</string>

    <string name="challenge_name_hint">Name Your challenge&#8230;</string>
    <string name="difficulty_easy">easy</string>
    <string name="difficulty_medium">medium</string>
    <string name="difficulty_hard">hard</string>
    <string name="difficulty_insane">insane</string>

    <string-array name="challenge_categories">
        <item>ALL</item>
        <item>AQUA SPHERE</item>
        <item>DRINKING ZONE</item>
        <item>EARGASMIC</item>
        <item>FITNESS AVENUE</item>
        <item>FOOD COMA</item>
        <item>FREAK MODE</item>
        <item>GIVING BACK</item>
        <item>MIND GAMES</item>
        <item>Other</item>
    </string-array>

    <string-array name="challenge_visibility">
        <item>Public</item>
        <item>Private</item>
    </string-array>

    <string name="visibility_public">Public</string>
    <string name="visibility_private">Private</string>
    <string name="challenge_category">Category:</string>
    <string name="challenge_visibility">Privacy:</string>
    <string name="create_action">Create!</string>
    <string name="upload_action">Upload a video challenge&#8230;</string>
    <string name="next_action">next</string>
    <string name="join_action">Join</string>
    <string name="show_respond_action">Upload a video</string>
    <string name="next_step">Next step</string>
    <string name="submit">Submit</string>

    <string name="validation_challenge_name_empty">You forgot to type the challenge name, you know&#8230;</string>
    <string name="validation_challenge_name_too_short">Challenge name should be at least 5 characters long. Just because :P</string>
    <string name="validation_challenge_name_too_long">Name longer than 250 characters ? Seriously ? ;]</string>
    <string name="validation_challenge_video_empty">Upload a video description&#8230;</string>
    <string name="validation_comment_empty">If you want to post a comment, write it first -_-</string>
    <string name="validation_comment_too_long">Only 250 characters allowed. It\'s just a comment, not a poem ;]</string>
    <string name="validation_search_phrase_empty">Can You give us at least 3 characters, please ? :)</string>

    <string name="success">Success</string>

    <string name="challenge_created">Challenge created and ready to join !</string>
    <string name="proceed_to_challenge">Go to challenge&#8230;</string>

    <string name="search_hint">Search&#8230;</string>
    <string name="search_action">Search</string>

    <string name="show_more">show more</string>
    <string name="more">more</string>

    <string name="challenge_details_created_at">Created:</string>
    <string name="challenge_details_difficulty">Difficulty:</string>

    <string name="best_users">BEST USERS</string>
    <string name="best_challenges">BEST CHALLENGES</string>
    <string name="trending_challenges">TRENDING</string>
    <string name="popular_challenges">MOST POPULAR</string>

    <string name="facebook_app_id">471463259622297</string>

    <string name="ok">OK!</string>
    <string name="response_for">Challenge response for: </string>
    <string name="submitted">Submitted:</string>

    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="rate">Rate</string>
    <string name="not_now">Not now</string>

    <string name="user_profile_created">Created:</string>
    <string name="user_profile_joined">Joined:</string>
    <string name="user_profile_completed">Completed:</string>

    <string name="points">points</string>

    <string name="comments">Comments</string>
    <string name="comment_dialog_header">Publish a comment</string>
    <string name="comments_hint">Write your comment here&#8230;</string>
    <string name="comments_leave">Leave a comment&#8230;</string>

    <string name="tutorial_welcome_message">Welcome to TheChallenger\r\n tutorial!</string>
    <string name="dismiss">Dismiss</string>
    <string name="get_started">Get Started</string>
    <string name="continue_tutorial">continue tutorial</string>
    <string name="finish_tutorial">Finish Tutorial</string>
    <string name="tutorial_title1">Creating a challenge</string>
    <string name="tutorial_title2">Discover challenges</string>
    <string name="tutorial_title3">Rankings</string>
    <string name="tutorial_title4">My Challenges</string>
    <string name="tutorial_title5">All done</string>
    <string name="tutorial_message1">Here You can create challenges that other people may want to join. \n\r Click!</string>
    <string name="tutorial_message2">Add a description and select a category that describes your challenge the best. \n\r Click next.</string>
    <string name="tutorial_message3">Set a difficulty level for Your challenge. \n\r Click next.</string>
    <string name="tutorial_message4">Choose a video so that people will know what is it all about. That\'s it!
        You are ready to create your first video challenge. \n\r Click "continue tutorial" button.</string>
    <string name="tutorial_message5">Discover Challenges lets you join challenges of other people. \n\r Click!</string>
    <string name="tutorial_message6">That\'s a hall of fame. Check out the most popular challenges and best users. \n\r Click!</string>
    <string name="tutorial_message7">A headquarters for Your challenges. They are all here. \n\r Click!</string>
    <string name="tutorial_message8">Thanks for keeping up with this tutorial. Always push Your limits and get out of the safety zone. Have fun!</string>

    <string name="top">Top</string>
    <string name="recent">Recent</string>
    <string name="categories">Categories</string>
    <string name="popular">Popular</string>

    <string name="no_challenges_found">No challenges found&#8230;</string>
    <string name="try_again">Try again&#8230;</string>
    <string name="no_connection_message">Couldn\'t connect to the internet. Check your connection and try again.</string>
    <string name="no_connection">No Internet Connection</string>

</resources>
