<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.cespenar.thechallenger.CreateChallengeActivity">
    <item android:id="@+id/action_profile" android:title="@string/action_profile"
        android:orderInCategory="1" android:showAsAction="never" />
    <item android:id="@+id/action_my_challenges" android:title="@string/action_my_challenges"
        android:orderInCategory="2" android:showAsAction="never" />
    <item android:id="@+id/action_my_participations" android:title="@string/action_my_participations"
        android:orderInCategory="3" android:showAsAction="never" />
    <item android:id="@+id/action_search" android:title="@string/action_search"
        android:orderInCategory="5" android:showAsAction="ifRoom" android:icon="@drawable/search_small"/>
</menu>
